<resources>
    <string name="app_name">Photos</string>
    <string name="open_album">Open Album</string>
    <string name="create_album">Create Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="rename_album">Rename Album</string>
    <string name="album_thumbnail">Album Thumbnail</string>
    <string name="album_name">Sample Album</string>
    <string name="rename_hint">Title...</string>
    <string name="add_photo">Add Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="add_tag">Add Tag</string>
    <string name="photo">Photo</string>
    <string name="location_text">Location</string>
    <string name="person_text">Name</string>
    <string name="person_label">Person</string>
    <string name="return_button">Return to Album</string>
    <string name="add_button">Add Tag</string>
    <string name="edit_button">Edit Tag</string>
    <string name="delete_tag_button">Delete Tag</string>
    <string name="slide_button">View Slideshow</string>
    <string name="back_button">Return to All Albums</string>
    <string name="slideShowNext"><![CDATA[>]]></string>
    <string name="slideShowBack"><![CDATA[<]]></string>
    <string name="search_title">Search By Tags</string>
    <string name="locationLabel">Location:</string>
    <string name="enter_location">Enter Location...</string>
    <string name="move_button">Move to New Album</string>
    <string name="move_photo_button">Move Photo</string>


</resources>