<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotosViewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/photo"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <FrameLayout
                android:layout_width="410dp"
                android:layout_height="162dp"
                android:layout_marginTop="1dp">

                <ListView
                    android:id="@+id/photoList"
                    android:layout_width="match_parent"
                    android:layout_height="161dp"
                    android:choiceMode="singleChoice"
                    android:listSelector="#dbe0c8" />
            </FrameLayout>

            <!--            <TextView-->
            <!--                android:id="@+id/textView"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/album_name"-->
            <!--                android:translationX="150dp" />-->

            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:text="@string/add_photo" />

            <Button
                android:id="@+id/removeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="left"
                android:text="@string/remove_photo" />

            <Button
                android:id="@+id/tagBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:text="@string/add_tag" />

            <Button
                android:id="@+id/slideBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:text="@string/slide_button" />

            <Button
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="10dp"
                android:text="@string/back_button" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
