<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="410dp"
                android:layout_height="308dp"
                android:layout_marginTop="1dp">

<!--                <ImageView-->
<!--                    android:id="@+id/imageView"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:contentDescription="@string/album_thumbnail"-->
<!--                    android:src="@drawable/question_mark" />-->

                <ListView
                    android:id="@+id/albumList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:choiceMode="singleChoice"
                    android:listSelector="#dbe0c8" />
            </FrameLayout>

<!--            <TextView-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/album_name"-->
<!--                android:translationX="150dp" />-->

            <Button
                android:id="@+id/openBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:text="@string/open_album" />

            <Button
                android:id="@+id/createBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:text="@string/create_album" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"

                android:text="@string/delete_album" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/renameBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginBottom="10dp"
                    android:text="@string/rename_album" />

                <EditText
                    android:id="@+id/renameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/rename_hint"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#919191" />

            </TableRow>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>